--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,12 +1,14 @@
 // Color Variables
-$primary-color: #0AA8A7;
+// $primary-color: #0AA8A7;
+$primary-color: ##E54117;
 $text-color: #777;
 $text-color-dark: #222;
 $body-color: #fff;
 $border-color: #ECECEC;
 $black: #000;
 $white: #fff;
-$light: #EDF6F5;
+// $light: #EDF6F5;
+$light: #FAD9D1;
 
 // Font Variables
 $primary-font: 'Lato', sans-serif;
