--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -1,6 +1,6 @@
 // Color Variables
 // $primary-color: #0AA8A7;
-$primary-color: ##E54117;
+$primary-color: #E54117;
 $text-color: #777;
 $text-color-dark: #222;
 $body-color: #fff;
